updated css image locations

--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="favicon" href="/images/favicon.ico">
     <title>Jaeden's Webpage</title>
 </head>
 <body>
     <!-- Your content goes here -->
     <h1>My name is Jaeden Waller.</h1>
     <p>I play a good amount of video games on my computer.</p>
-    <p>I have two cats Tiger and Mischief. They are sisters and are about four years old.</p>
-    <div id="cat1">
+    <br>
+    <h3>Games I play:</h3>
+
+    <h3>My Cats!</h3>
+    <p id="catwords">I have two cats Tiger and Mischief. They are sisters and are about four years old.</p>
+    <div class="cat1">
         <img src="images/cat1.jpg" alt="This is a picture of my cat Tiger." width="350" height="600">
         <img src="images/cat3.jpg" alt="This is a picture of my cat Mischief" width="450" height="600">
     </div>
